--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div class="global-width">
+    <section class="section">
         <header class="header">
-            <h2>Baek's Company</h1>
-        </header>
-        <section class="section">
-            <div id="main-title">
-                <p>서울의 모든것을 담다.</p>
+            <div class="global-width">
+                <h2>Baek's Company</h2>
             </div>
-        </section>
-    </div>
-    
+        </header>
+        <div id="main-title">
+            <p>의 모든 것</p>
+        </div>
+        <div class="img-container">
+            <img src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
+            <img src="img/Gyeongbokgung Palace.jpg" alt="">
+            <img src="img/photo-1578037571214-25e07ed4a487.avif" type="image/avif" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
