add: 여행지 카드 추가

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,21 +7,43 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
     <section class="section">
         <header class="header">
             <div class="global-width">
-                <h2>Baek's Company</h2>
+                <h1>Baek's Company</h1>
             </div>
         </header>
         <div id="main-title">
-            <p>의 모든 것</p>
+            <p>서경속부</p>
         </div>
         <div class="img-container">
             <img src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
             <img src="img/Gyeongbokgung Palace.jpg" alt="">
             <img src="img/photo-1578037571214-25e07ed4a487.avif" type="image/avif" alt="">
+        </div>
+        <div class="global-width">
+            <div class="main-module-container">
+                <h2 id="headline">국내 대표 여행지</h2>
+                <div class="card-container">
+                    <div class="main-city-card">
+                        <h3 class="main-city-card-title">서울</h3>
+                        <div class="main-city-card-desc">가나다라마바사아차자카타파하가나다라마바사아차자카타파하가나다라마바사아차자카타파하가나다라마바사아차자카타파하가나다라마바사아차자카타파하</div>
+                    </div>
+                    <div class="main-city-card">
+                        <h3 class="main-city-card-title">경기</h3>
+                        <div class="main-city-card-desc">한줄 소개</div>
+                    </div>
+                    <div class="main-city-card">
+                        <h3 class="main-city-card-title">속초</h3>
+                        <div class="main-city-card-desc">한줄 소개</div>
+                    </div>
+                    <div class="main-city-card">
+                        <h3 class="main-city-card-title">부산</h3>
+                        <div class="main-city-card-desc">한줄 소개</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
