--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             </div>
         </header>
         <div id="main-title">
-            <p>서경속부</p>
+            <span class="main-title-element">서</span>
+            <span class="main-title-element">경</span>
+            <span class="main-title-element">속</span>
+            <span class="main-title-element">부</span>
         </div>
         <div class="img-container">
             <img src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
@@ -25,7 +28,7 @@
         <div class="global-width">
             <div class="main-module-container">
                 <h2 id="headline">국내 대표 여행지</h2>
-                <div class="card-container">
+                <div class="card-wrapper">
                     <div class="main-city-card">
                         <h3 class="main-city-card-title">서울</h3>
                         <div class="main-city-card-desc">가나다라마바사아차자카타파하가나다라마바사아차자카타파하가나다라마바사아차자카타파하가나다라마바사아차자카타파하가나다라마바사아차자카타파하</div>
