Remove: 메인 이미지 외 이미지(경복궁, 부산) 삭제

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
             </div>
         </header>
         <div id="main-title">
-            <span class="main-title-element" id="seoul">서</span>
-            <span class="main-title-element" id="gyeonggi">경</span>
-            <span class="main-title-element" id="sokcho">속</span>
-            <span class="main-title-element" id="busan">부</span>
+            <span class="main-title-element">서</span>
+            <span class="main-title-element">경</span>
+            <span class="main-title-element">속</span>
+            <span class="main-title-element">부</span>
         </div>
         <div class="img-container">
             <img src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
+            <img src="img/Gyeongbokgung Palace.jpg" alt="">
+            <img src="img/photo-1578037571214-25e07ed4a487.avif" type="image/avif" alt="">
         </div>
         <div class="global-width">
             <div class="main-module-container">
