Design: 여행지 카드 background-image 삽입

--- a/index.html
+++ b/index.html
@@ -11,40 +11,43 @@
     <section class="section">
         <header class="header">
             <div class="global-width">
-                <h1>Baek's Company</h1>
+                <div id="main-header">
+                    <h1>Baek's Company</h1>
+                </div>
             </div>
         </header>
         <div id="main-title">
-            <span class="main-title-element">서</span>
-            <span class="main-title-element">경</span>
-            <span class="main-title-element">속</span>
-            <span class="main-title-element">부</span>
+            <span class="main-title-element" id="seoul">서</span>
+            <span class="main-title-element" id="gyeonggi">경</span>
+            <span class="main-title-element" id="sokcho">속</span>
+            <span class="main-title-element" id="busan">부</span>
         </div>
         <div class="img-container">
-            <img src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
+            <img id="main-img" src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
         </div>
         <div class="global-width">
             <div class="main-module-container">
                 <h2 id="headline">국내 대표 여행지</h2>
                 <div class="card-wrapper">
-                    <div class="main-city-card">
+                    <div class="main-city-card" id="card-seoul">
                         <h3 class="main-city-card-title">서울</h3>
-                        <div class="main-city-card-desc">가나다라마바사아차자카타파하가나다라마바사아차자카타파하가나다라마바사아차자카타파하가나다라마바사아차자카타파하가나다라마바사아차자카타파하</div>
+                        <div class="main-city-card-desc">한줄 소개</div>
                     </div>
-                    <div class="main-city-card">
+                    <div class="main-city-card" id="card-gyeonggi">
                         <h3 class="main-city-card-title">경기</h3>
                         <div class="main-city-card-desc">한줄 소개</div>
                     </div>
-                    <div class="main-city-card">
+                    <div class="main-city-card" id="card-sokcho">
                         <h3 class="main-city-card-title">속초</h3>
                         <div class="main-city-card-desc">한줄 소개</div>
                     </div>
-                    <div class="main-city-card">
+                    <div class="main-city-card" id="card-busan">
                         <h3 class="main-city-card-title">부산</h3>
                         <div class="main-city-card-desc">한줄 소개</div>
                     </div>
                 </div>
             </div>
+            
         </div>
     </section>
 </body>
