Design: main-title 가운데 정렬

--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
 <body>
     <section class="section">
         <header class="header">
-            <div class="global-width">
+            <div class="img-container">
+                <img id="mainImage" src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
                 <div id="main-header">
-                    <h1>Baek's Company</h1>
+                    <h1 id="logo">Baek's Company</h1>
                 </div>
-            </div>
         </header>
         <div id="main-title">
             <span class="main-title-element" id="seoul">서</span>
             <span class="main-title-element" id="gyeonggi">경</span>
             <span class="main-title-element" id="sokcho">속</span>
             <span class="main-title-element" id="busan">부</span>
-        </div>
-        <div class="img-container">
-            <img id="main-img" src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
         </div>
         <div class="global-width">
             <div class="main-module-container">
@@ -47,7 +44,6 @@
                     </div>
                 </div>
             </div>
-            
         </div>
     </section>
 </body>
