--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 </div>
             </div>
         </div>
+        <footer>
+            
+        </footer>
     </section>
 </body>
 
