Feat: 여행지 카드 hover시 확대

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                 <div class="card-wrapper">
                     <div class="main-city-card" id="card-seoul">
                         <h3 class="main-city-card-title">서울</h3>
-                        <div class="main-city-card-desc">한줄 소개</div>
+                        <div class="main-city-card-desc">한국의 심장</div>
                     </div>
                     <div class="main-city-card" id="card-gyeonggi">
                         <h3 class="main-city-card-title">경기</h3>
-                        <div class="main-city-card-desc">한줄 소개</div>
+                        <div class="main-city-card-desc">시작합니다!</div>
                     </div>
                     <div class="main-city-card" id="card-sokcho">
                         <h3 class="main-city-card-title">속초</h3>
-                        <div class="main-city-card-desc">한줄 소개</div>
+                        <div class="main-city-card-desc">자연 그대로의 아름다움</div>
                     </div>
                     <div class="main-city-card" id="card-busan">
                         <h3 class="main-city-card-title">부산</h3>
-                        <div class="main-city-card-desc">한줄 소개</div>
+                        <div class="main-city-card-desc">바다의 도시</div>
                     </div>
                 </div>
             </div>
