Design: Mainimage 높이 100vh 설정

--- a/index.html
+++ b/index.html
@@ -40,15 +40,16 @@
                     </div>
                     <div class="main-city-card" id="card-busan">
                         <h3 class="main-city-card-title">부산</h3>
-                        <div class="main-city-card-desc">바다의 도시</div>
+                        <div class="main-city-card-desc">바다의 도시</div>  
                     </div>
-                </div>
-            </div>
+                </div>  
+            </div>      
         </div>
         <footer>
             
-        </footer>
+        </footer>   
     </section>
+    <script src="./script.js"></script>
 </body>
 
 </html>
