Refactor: Redefine file, variable, function name

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             <div class="main-module-container">
                 <h2 id="headline">국내 대표 여행지</h2>
                 <div class="card-wrapper">
-                    <div class="main-city-card" id="card-seoul" onclick="se_load()">
+                    <div class="main-city-card" id="card-seoul" onclick="loadSeoul()">
                         <h3 class="main-city-card-title">서울</h3>
                         <div class="main-city-card-desc">한국의 심장</div>
                     </div>
-                    <div class="main-city-card" id="card-gyeonggi" onclick="gd_load()">
+                    <div class="main-city-card" id="card-gyeonggi" onclick="loadGyeonggi()">
                         <h3 class="main-city-card-title">경기</h3>
                         <div class="main-city-card-desc">시작합니다!</div>
                     </div>
-                    <div class="main-city-card" id="card-sokcho" onclick="sc_load()">
+                    <div class="main-city-card" id="card-sokcho" onclick="loadSokcho()">
                         <h3 class="main-city-card-title">속초</h3>
                         <div class="main-city-card-desc">자연 그대로의 아름다움</div>
                     </div>
-                    <div class="main-city-card" id="card-busan" onclick="busan_load()">
+                    <div class="main-city-card" id="card-busan" onclick="loadBusan()">
                         <h3 class="main-city-card-title">부산</h3>
                         <div class="main-city-card-desc">바다의 도시</div>  
                     </div>
