--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <div id="main-header">
                     <h1 id="logo">Baek's Company</h1>
                 </div>
+            </div>
         </header>
         <div id="main-title">
             <span class="main-title-element" id="seoul">서</span>
@@ -40,7 +41,7 @@
                     </div>
                     <div class="main-city-card" id="card-busan" onclick="loadBusan()">
                         <h3 class="main-city-card-title">부산</h3>
-                        <div class="main-city-card-desc">바다의 도시</div>  
+                        <div class="main-city-card-desc">바다의 도시</div>
                     </div>
                 </div>  
             </div>
