Design: 리스트 style 변경

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="global-width">  
             <div class="main-module-container">
-                <h2 id="headline">국내 대표 여행지</h2>
+                <h2 class="headline">국내 대표 여행지</h2>
                 <div class="card-wrapper">
                     <div class="main-city-card" id="card-seoul" onclick="loadSeoul()">
                         <h3 class="main-city-card-title">서울</h3>
@@ -46,6 +46,7 @@
                 </div>  
             </div>
             <div class="list-container">
+                <h2 class="headline"> 대표 명소</h2>
                 <ul id="listElement">
                 </ul>
             </div>
