Design: 명소리스트-간격 조정, 배경 추가 & 정렬 드롭다운 추가

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                     <div class="tag" id="tagBusan" onclick="loadCity('busan')">
                         <div class="tag-name">부산</div>
                     </div>
+                    <div class="sort-by">
+                        <select name="sort">
+                            <option value="" selected>별점순</option>
+                        </select>
+                    </div>
                 </div>
                 <ul id="listElement">
                 </ul>
