Refactor: header 구조 변경

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <section class="section">
         <header class="header">
-            <div class="img-container">
-                <img id="mainImage" src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
-                <div id="main-header">
-                    <h1 id="logo">Baek's Company</h1>
-                </div>
+            <div class="test">
+                <h1 id="logo">Baek's Company</h1>
             </div>
         </header>
+        <div class="img-container">
+            <img id="mainImage" src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
+        </div>
         <div id="main-title">
             <span class="main-title-element" id="seoul">서</span>
             <span class="main-title-element" id="gyeonggi">경</span>
