Design: 배경 style 변경

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 <h1 id="logo">Baek's Company</h1>
             </div>
         </header>
-        <div class="img-container">
-            <img id="mainImage" src="img/photo-1554310603-d39d43033735.avif" type="image/avif" alt="">
+        <div id="img-container" onload="">
+            <img id="mainImage" src="" type="image/avif" alt=".">
         </div>
         <div id="main-title">
-            <span class="main-title-element" id="seoul">서</span>
-            <span class="main-title-element" id="gyeonggi">경</span>
-            <span class="main-title-element" id="sokcho">속</span>
-            <span class="main-title-element" id="busan">부</span>
+            <span class="main-title-element" id="seoul">서울</span>
+            <span class="main-title-element" id="gyeonggi">경기</span>
+            <span class="main-title-element" id="sokcho">속초</span>
+            <span class="main-title-element" id="busan">부산</span>
         </div>
         <div class="global-width">  
             <div class="main-module-container">
