Design: main-title 투명도 100%, 테두리 추가 및 바탕 이미지 변경

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
         </header>
         <div id="img-container" onload="">
-            <img id="mainImage" src="" type="image/avif" alt=".">
+<!--            <img id="mainImage" src="" type="image/avif" alt="">-->
         </div>
         <div id="main-title">
             <span class="main-title-element" id="seoul">서울</span>
@@ -23,7 +23,7 @@
             <span class="main-title-element" id="sokcho">속초</span>
             <span class="main-title-element" id="busan">부산</span>
         </div>
-        <div class="global-width">  
+        <div class="global-width">
             <div class="main-module-container">
                 <h2 class="headline">국내 대표 여행지</h2>
                 <div class="card-wrapper">
@@ -65,6 +65,7 @@
                             <option value="" selected>별점순</option>
                         </select>
                     </div>
+
                 </div>
                 <ul id="listElement">
                 </ul>
