Design: 바탕 이미지 자동변경

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             </div>
         </header>
         <div id="img-container" onload="">
-<!--            <img id="mainImage" src="" type="image/avif" alt="">-->
+            <div id="black"></div>
+           <img id="mainImage">
         </div>
         <div id="main-title">
             <span class="main-title-element" id="seoul">서울</span>
