Design: 여행카드(부산) 설명 수정

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="main-city-card-desc">바다의 도시</div>
                         <div class = "fade">
                             <h2 class="fade-title">부산의 필수코스, 해운대</h2>
-                            <p class="fade-desc">해운대구는 해운대 해수욕장과 같이 모래사장이 넓게 펼쳐진 동해안 해변과 서핑을 즐기기 좋은 송정 등으로 잘 알려진 현대적인 지역입니다. SEA LIFE 부산아쿠아리움에서는 상어와 거북이를 볼 수 있으며, 부산 시립미술관에는 현대 한국과 전 세계의 작품이 전시되어 있습니다. 식사는 현지 가정식 백반부터 푸드 트럭과 세계 각국의 메뉴를 선보이는 고급 레스토랑까지 다양하게 즐길 수 있으며, 편안한 맥줏집과 세련된 칵테일 가게가 어우러져 있습니다</p>
+                            <p class="fade-desc">해운대구는 해운대 해수욕장과 같이 모래사장이 넓게 펼쳐진 동해안 해변과 서핑을 즐기기 좋은 송정 등으로 잘 알려진 현대적인 지역입니다. SEA LIFE 부산아쿠아리움에서는 상어와 거북이를 볼 수 있으며, 부산 시립미술관에는 현대 한국과 전 세계의 작품이 전시되어 있습니다.</p>
                         </div>
                     </div>
                 </div>
