Design: 여행카드 UI 변경'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -38,7 +39,7 @@
                     </div>
                     <div class="main-city-card" id="cardGyeonggi">
                         <h3 class="main-city-card-title">경기</h3>
-                        <div class="main-city-card-desc">시작합니다!</div>
+                        <div class="main-city-card-desc">역사의 중심</div>
                         <div class = "fade">
                             <h2 class="fade-title">과거를 걸으며, 수원화성</h2>
                             <p class="fade-desc">수원 화성 혹은 화성은 대한민국 경기도 수원시 팔달구 장안동에 있는 길이 5.52킬로미터의 성곽입니다. 1963년 대한민국의 사적 제3호로 지정되었으며, 1997년 유네스코 세계문화유산으로 등록되었습니다.</p>
