Fix: seoul.json 창덕궁 중복 오류 수정

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
-    <title>Document</title>
+    <title>1팀 1기업 프로젝트 - 백컴퍼니</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <section class="section">
         <header class="header">
             <div class="test">
-                <h1 id="logo">Baek's Company</h1>
+                <h1 id="logo">Baek's Travle</h1>
             </div>
         </header>
         <div id="img-container" onload="">
