Style: Format code

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
     <section class="section">
         <header class="header">
-            <div class="test">
-                <h1 id="logo">Baek's Travle</h1>
+            <div class="logo-wrapper">
+                <h1 id="logo">Baek's Travel</h1>
             </div>
         </header>
         <div id="img-container" onload="">
             <div id="black"></div>
-           <img id="mainImage">
+            <img id="mainImage">
         </div>
-        <div id="main-title">
+        <div id="mainTitle">
             <span class="main-title-element" id="seoul">서울</span>
             <span class="main-title-element" id="gyeonggi">경기</span>
             <span class="main-title-element" id="sokcho">속초</span>
@@ -33,33 +33,38 @@
                     <div class="main-city-card" id="cardSeoul">
                         <h3 class="main-city-card-title">서울</h3>
                         <div class="main-city-card-desc">한국의 심장</div>
-                        <div class = "fade">
+                        <div class="fade">
                             <h2 class="fade-title">아름다운 야경, N서울타워</h2>
-                            <p class="fade-desc">남산서울타워는 대한민국 서울특별시 용산구 용산동2가 남산 정상 부근에 위치한 전파 송출 및 관광용 타워입니다. 1969년에 착공하여 1975년 7월 30일 완공되었습니다. 높이는 236.7m, 해발 479.7m입니다. 수도권의 지상파 방송사들이 이 타워를 이용하여 전파를 송출한다네요.</p>
+                            <p class="fade-desc">남산서울타워는 대한민국 서울특별시 용산구 용산동2가 남산 정상 부근에 위치한 전파 송출 및 관광용 타워입니다. 1969년에
+                                착공하여 1975년 7월 30일 완공되었습니다. 높이는 236.7m, 해발 479.7m입니다. 수도권의 지상파 방송사들이 이 타워를 이용하여 전파를
+                                송출한다네요.</p>
                         </div>
                     </div>
                     <div class="main-city-card" id="cardGyeonggi">
                         <h3 class="main-city-card-title">경기</h3>
                         <div class="main-city-card-desc">역사의 중심</div>
-                        <div class = "fade">
+                        <div class="fade">
                             <h2 class="fade-title">과거를 걸으며, 수원화성</h2>
-                            <p class="fade-desc">수원 화성 혹은 화성은 대한민국 경기도 수원시 팔달구 장안동에 있는 길이 5.52킬로미터의 성곽입니다. 1963년 대한민국의 사적 제3호로 지정되었으며, 1997년 유네스코 세계문화유산으로 등록되었습니다.</p>
+                            <p class="fade-desc">수원 화성 혹은 화성은 대한민국 경기도 수원시 팔달구 장안동에 있는 길이 5.52킬로미터의 성곽입니다. 1963년 대한민국의
+                                사적 제3호로 지정되었으며, 1997년 유네스코 세계문화유산으로 등록되었습니다.</p>
                         </div>
                     </div>
                     <div class="main-city-card" id="cardSokcho">
                         <h3 class="main-city-card-title">속초</h3>
                         <div class="main-city-card-desc">자연 그대로의 아름다움</div>
-                        <div class = "fade">
+                        <div class="fade">
                             <h2 class="fade-title">자연 그대로의 멋, 설악산</h2>
-                            <p class="fade-desc">설악산은 강원도 속초시, 양양군, 인제군, 고성군에 걸쳐 있는 해발고도 1,708미터의 산입니다. 대한민국에서는 한라산과 지리산 다음으로 높은 산이라고 하네요. 추석 무렵부터 눈이 내리기 시작하며 여름이 되어야 녹는 까닭으로 이렇게 이름 지었다고 합니다.</p>
+                            <p class="fade-desc">설악산은 강원도 속초시, 양양군, 인제군, 고성군에 걸쳐 있는 해발고도 1,708미터의 산입니다. 대한민국에서는 한라산과 지리산
+                                다음으로 높은 산이라고 하네요. 추석 무렵부터 눈이 내리기 시작하며 여름이 되어야 녹는 까닭으로 이렇게 이름 지었다고 합니다.</p>
                         </div>
                     </div>
                     <div class="main-city-card" id="cardBusan">
                         <h3 class="main-city-card-title">부산</h3>
                         <div class="main-city-card-desc">바다의 도시</div>
-                        <div class = "fade">
+                        <div class="fade">
                             <h2 class="fade-title">부산의 필수코스, 해운대</h2>
-                            <p class="fade-desc">해운대구는 해운대 해수욕장과 같이 모래사장이 넓게 펼쳐진 동해안 해변과 서핑을 즐기기 좋은 송정 등으로 잘 알려진 현대적인 지역입니다. SEA LIFE 부산아쿠아리움에서는 상어와 거북이를 볼 수 있으며, 부산 시립미술관에는 현대 한국과 전 세계의 작품이 전시되어 있습니다.</p>
+                            <p class="fade-desc">해운대구는 해운대 해수욕장과 같이 모래사장이 넓게 펼쳐진 동해안 해변과 서핑을 즐기기 좋은 송정 등으로 잘 알려진 현대적인
+                                지역입니다. SEA LIFE 부산아쿠아리움에서는 상어와 거북이를 볼 수 있으며, 부산 시립미술관에는 현대 한국과 전 세계의 작품이 전시되어 있습니다.</p>
                         </div>
                     </div>
                 </div>
