Feat: Smooth Scrolling to touristAttraction

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <h2 class="headline"> 대표 명소</h2>
+            <h2 class="headline" id="touristAttraction">대표 명소</h2>
             <div class="list-container">
                 <div class="tag-container">
                     <div class="tag" id="tagSeoul" onclick="loadCity('seoul')">
@@ -94,10 +94,10 @@
                 <ul id="listElement">
                 </ul>
             </div>
+            <nav class="scroll-top" id="scrollTop">맨 위로 가기</nav>
+            <footer>
+            </footer>
         </div>
-        <footer>
-
-        </footer>
     </section>
     <script src="./index.js"></script>
 </body>
