Design: 명소 리스트 간격 수정

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                 </div>
             </div>
             <h2 class="headline" id="touristAttraction">대표 명소</h2>
-            <div class="list-container">
                 <div class="tag-container">
                     <div class="tag" id="tagSeoul" onclick="loadCity('seoul')">
                         <div class="tag-name">서울</div>
@@ -89,12 +88,14 @@
                             <option value="" selected>별점순</option>
                         </select>
                     </div>
-
                 </div>
+            <div class="list-container">
                 <ul id="listElement">
                 </ul>
             </div>
-            <nav class="scroll-top" id="scrollTop">맨 위로 가기</nav>
+            <nav class="scroll-top" id="scrollTop">
+                <a class="scroller">맨 위로 가기</a>
+            </nav>
             <footer>
             </footer>
         </div>
