--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
-    <title>1팀 1기업 프로젝트 - 백컴퍼니</title>
+    <title>Beak's Travel</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -25,6 +25,21 @@
             <span class="main-title-element" id="gyeonggi">경기</span>
             <span class="main-title-element" id="sokcho">속초</span>
             <span class="main-title-element" id="busan">부산</span>
+        </div>
+        <div class="team">
+            <div class="team-developers">
+                <p class="job-group">UI/UX Design</p>
+                <ul>
+                    <li class="developer-name developer-name-jaewon" onclick="window.open('https://github.com/wodnjse')">Kim Jae-won</li>
+                </ul>
+            </div>
+            <div class="team-developers">
+                <p class="job-group">Web Development</p>
+                <ul>
+                    <li class="developer-name developer-name-jaewon" onclick="window.open('https://github.com/wodnjse')">Kim Jae-won</li>
+                    <li class="developer-name developer-name-inwon" onclick="window.open('https://github.com/baekinwon')">Baek In-won</li>
+                </ul>
+            </div>
         </div>
         <div class="global-width">
             <div class="main-module-container">
