Feat: 개발 명단 클릭 시, github 프로필 페이지 로드

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="section">
         <header class="header">
             <div class="logo-wrapper">
-                <h1 id="logo">Baek's Travel</h1>
+                <h1 id="logo" onclick="window.open('https://github.com/wodnjse/SGSB-travel')">Baek's Travel</h1>
             </div>
         </header>
         <div id="img-container" onload="">
@@ -30,14 +30,14 @@
             <div class="team-developers">
                 <p class="job-group">UI/UX Design</p>
                 <ul>
-                    <li class="developer-name developer-name-jaewon" onclick="window.open('https://github.com/wodnjse')">Kim Jae-won</li>
+                    <li class="developer-name developer-name-jaewon">Kim Jae-won</li>
                 </ul>
             </div>
             <div class="team-developers">
                 <p class="job-group">Web Development</p>
                 <ul>
-                    <li class="developer-name developer-name-jaewon" onclick="window.open('https://github.com/wodnjse')">Kim Jae-won</li>
-                    <li class="developer-name developer-name-inwon" onclick="window.open('https://github.com/baekinwon')">Baek In-won</li>
+                    <li class="developer-name developer-name-jaewon">Kim Jae-won</li>
+                    <li class="developer-name developer-name-inwon">Baek In-won</li>
                 </ul>
             </div>
         </div>
@@ -99,9 +99,11 @@
                         <div class="tag-name">부산</div>
                     </div>
                     <div class="sort-by">
-                        <select name="sort">
-                            <option value="" selected>별점순</option>
-                        </select>
+                        <label>
+                            <select name="sort">
+                                <option value="" selected>별점순</option>
+                            </select>
+                        </label>
                     </div>
                 </div>
             <div class="list-container">
