--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <title>Beak's Travel</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <section class="section">
@@ -83,8 +84,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <h2 class="headline" id="touristAttraction">대표 명소</h2>
+                <h2 class="headline" id="touristAttraction">대표 명소</h2>
                 <div class="tag-container">
                     <div class="tag" id="tagSeoul" onclick="loadCity('seoul')">
                         <div class="tag-name">서울</div>
@@ -106,13 +106,11 @@
                         </label>
                     </div>
                 </div>
-            <div class="list-container">
-                <ul id="listElement">
-                </ul>
+                <div class="list-container">
+                    <ul id="listElement">
+                    </ul>
+                </div>
             </div>
-            <nav class="scroll-top" id="scrollTop">
-                <a class="scroller">맨 위로 가기</a>
-            </nav>
             <footer>
             </footer>
         </div>
