Design: 메인 페이지 디자인 변경

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <body>
     <section class="section">
         <header class="header">
-            <div class="logo-wrapper">
-                <h1 id="logo" onclick="window.open('https://github.com/wodnjse/SGSB-travel')">Baek's Travel</h1>
-            </div>
+
         </header>
         <div id="img-container" onload="">
             <div id="black"></div>
@@ -27,19 +25,29 @@
             <span class="main-title-element" id="sokcho">속초</span>
             <span class="main-title-element" id="busan">부산</span>
         </div>
-        <div class="team">
-            <div class="team-developers">
-                <p class="job-group">UI/UX Design</p>
-                <ul>
-                    <li class="developer-name developer-name-jaewon">Kim Jae-won</li>
-                </ul>
+        <div class="project-information">
+            <div class="project-introduction">
+                <p id="teamName">Baek's Travel</p>
+                <h1 id="projectName" onclick="window.open('https://github.com/wodnjse/SGSB-travel')">서경속부</h1>
+                <p id="introduction">국내 대표 명소를 한눈에.</p>
             </div>
             <div class="team-developers">
-                <p class="job-group">Web Development</p>
-                <ul>
-                    <li class="developer-name developer-name-jaewon">Kim Jae-won</li>
-                    <li class="developer-name developer-name-inwon">Baek In-won</li>
-                </ul>
+                <div class="position">
+                    <p class="job-group">UI/UX Design</p>
+                    <ul>
+                        <li class="developer-name developer-name-jaewon">Kim Jae-won</li>
+                    </ul>
+                </div>
+                <div class="inner-padding">
+                    <span role="text"></span>
+                </div>
+                <div class="position">
+                    <p class="job-group">Web Development</p>
+                    <ul>
+                        <li class="developer-name developer-name-jaewon">Kim Jae-won</li>
+                        <li class="developer-name developer-name-inwon">Baek In-won</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="global-width">
