Design: 반응형 구현1

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
                 <h2 class="headline">국내 대표 여행지</h2>
                 <div class="card-wrapper">
                     <div class="main-city-card" id="cardSeoul">
-                        <h3 class="main-city-card-title">서울</h3>
-                        <div class="main-city-card-desc">한국의 심장</div>
+                        <div class="main-city-card-typo-wrapper">
+                            <h3 class="main-city-card-title">서울</h3>
+                            <div class="main-city-card-desc">한국의 심장</div>
+                        </div>
                         <div class="fade">
                             <h2 class="fade-title">아름다운 야경, N서울타워</h2>
                             <p class="fade-desc">남산서울타워는 대한민국 서울특별시 용산구 용산동2가 남산 정상 부근에 위치한 전파 송출 및 관광용 타워입니다. 1969년에
@@ -65,8 +67,10 @@
                         </div>
                     </div>
                     <div class="main-city-card" id="cardGyeonggi">
-                        <h3 class="main-city-card-title">경기</h3>
-                        <div class="main-city-card-desc">역사의 중심</div>
+                        <div class="main-city-card-typo-wrapper">
+                            <h3 class="main-city-card-title">경기</h3>
+                            <div class="main-city-card-desc">역사의 중심</div>
+                        </div>
                         <div class="fade">
                             <h2 class="fade-title">과거를 걸으며, 수원화성</h2>
                             <p class="fade-desc">수원 화성 혹은 화성은 대한민국 경기도 수원시 팔달구 장안동에 있는 길이 5.52킬로미터의 성곽입니다. 1963년 대한민국의
@@ -74,8 +78,10 @@
                         </div>
                     </div>
                     <div class="main-city-card" id="cardSokcho">
-                        <h3 class="main-city-card-title">속초</h3>
-                        <div class="main-city-card-desc">자연 그대로의 아름다움</div>
+                        <div class="main-city-card-typo-wrapper">
+                            <h3 class="main-city-card-title">속초</h3>
+                            <div class="main-city-card-desc">자연 그대로의 아름다움</div>
+                        </div>
                         <div class="fade">
                             <h2 class="fade-title">자연 그대로의 멋, 설악산</h2>
                             <p class="fade-desc">설악산은 강원도 속초시, 양양군, 인제군, 고성군에 걸쳐 있는 해발고도 1,708미터의 산입니다. 대한민국에서는 한라산과 지리산
@@ -83,8 +89,10 @@
                         </div>
                     </div>
                     <div class="main-city-card" id="cardBusan">
-                        <h3 class="main-city-card-title">부산</h3>
-                        <div class="main-city-card-desc">바다의 도시</div>
+                        <div class="main-city-card-typo-wrapper">
+                            <h3 class="main-city-card-title">부산</h3>
+                            <div class="main-city-card-desc">바다의 도시</div>
+                        </div>
                         <div class="fade">
                             <h2 class="fade-title">부산의 필수코스, 해운대</h2>
                             <p class="fade-desc">해운대구는 해운대 해수욕장과 같이 모래사장이 넓게 펼쳐진 동해안 해변과 서핑을 즐기기 좋은 송정 등으로 잘 알려진 현대적인
